start chat endpoint and cleanup sign in endpoint

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,11 +3,14 @@ CFLAGS=-c -Wall -I../common -I../common/network
 LDFLAGS=-Wall -I../common -I../common/network -L../common
 LIBS=-pthread -ludp-hp-common
 
-SOURCES=sign_in_hp_endpoint.c
+SIGN_IN_SOURCES=sign_in_hp_endpoint.c
+CHAT_SOURCES=chat_hp_endpoint.c
 
-OBJECTS=$(SOURCES:.c=.o)
+SIGN_IN_OBJECTS=$(SIGN_IN_SOURCES:.c=.o)
+CHAT_OBJECTS=$(CHAT_SOURCES:.c=.o)
 
-EXECUTABLE=server_sign_in
+SVR_SIGN_IN_EXECUTABLE=server_sign_in
+SVR_CHAT_EXECUTABLE=server_chat
 
 DEPENDENCIES=../common
 
@@ -15,10 +18,13 @@ define get_objs =
 `ls $(1)/*.o`
 endef
 
-all: $(SOURCES) $(EXECUTABLE)
+all: $(SOURCES) $(SVR_SIGN_IN_EXECUTABLE) $(SVR_CHAT_EXECUTABLE)
 
-$(EXECUTABLE): dependencies $(OBJECTS)
-	$(CC) $(LDFLAGS) $(OBJECTS) $(foreach dir, $(DEPENDENCIES), $(call get_objs,$(dir))) -o $@ $(LIBS)
+$(SVR_SIGN_IN_EXECUTABLE): dependencies $(SIGN_IN_OBJECTS)
+	$(CC) $(LDFLAGS) $(SIGN_IN_OBJECTS) $(foreach dir, $(DEPENDENCIES), $(call get_objs,$(dir))) -o $@ $(LIBS)
+
+$(SVR_CHAT_EXECUTABLE): dependencies $(CHAT_OBJECTS)
+	$(CC) $(LDFLAGS) $(CHAT_OBJECTS) $(foreach dir, $(DEPENDENCIES), $(call get_objs,$(dir))) -o $@ $(LIBS)
 
 %.o : %.c
 	$(CC) $(CFLAGS) $< -o $@
@@ -31,7 +37,7 @@ $(DEPENDENCIES):
 	$(MAKE) -C $@ all
 
 clean:
-	rm -f *o $(EXECUTABLE)
+	rm -f *o $(SVR_SIGN_IN_EXECUTABLE) $(SVR_CHAT_EXECUTABLE)
 	for dir in $(DEPENDENCIES); do \
 	$(MAKE) -C $$dir clean; \
 	done
