start adding in-memory structures

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,12 +3,15 @@ CFLAGS=-c -Wall -I../common -I../common/network
 LDFLAGS=-Wall -I../common -I../common/network -L../common
 LIBS=-pthread -ludp-hp-common
 
+THE_SRV_SOURCES=the_server.c
 SIGN_IN_SOURCES=sign_in_hp_endpoint.c
 CHAT_SOURCES=chat_hp_endpoint.c
 
+THE_SRV_OBJECTS=$(THE_SRV_SOURCES:.c=.o)
 SIGN_IN_OBJECTS=$(SIGN_IN_SOURCES:.c=.o)
 CHAT_OBJECTS=$(CHAT_SOURCES:.c=.o)
 
+THE_SRV_EXECUTABLE=the_server
 SVR_SIGN_IN_EXECUTABLE=server_sign_in
 SVR_CHAT_EXECUTABLE=server_chat
 
@@ -18,7 +21,10 @@ define get_objs =
 `ls $(1)/*.o`
 endef
 
-all: $(SOURCES) $(SVR_SIGN_IN_EXECUTABLE) $(SVR_CHAT_EXECUTABLE)
+all: $(SOURCES) $(THE_SRV_EXECUTABLE) $(SVR_SIGN_IN_EXECUTABLE) $(SVR_CHAT_EXECUTABLE)
+
+$(THE_SRV_EXECUTABLE): dependencies $(THE_SRV_OBJECTS)
+	$(CC) $(LDFLAGS) $(THE_SRV_OBJECTS) $(foreach dir, $(DEPENDENCIES), $(call get_objs,$(dir))) -o $@ $(LIBS)
 
 $(SVR_SIGN_IN_EXECUTABLE): dependencies $(SIGN_IN_OBJECTS)
 	$(CC) $(LDFLAGS) $(SIGN_IN_OBJECTS) $(foreach dir, $(DEPENDENCIES), $(call get_objs,$(dir))) -o $@ $(LIBS)
@@ -37,7 +43,7 @@ $(DEPENDENCIES):
 	$(MAKE) -C $@ all
 
 clean:
-	rm -f *o $(SVR_SIGN_IN_EXECUTABLE) $(SVR_CHAT_EXECUTABLE)
+	rm -f *o $(THE_SRV_EXECUTABLE) $(SVR_SIGN_IN_EXECUTABLE) $(SVR_CHAT_EXECUTABLE)
 	for dir in $(DEPENDENCIES); do \
 	$(MAKE) -C $$dir clean; \
 	done
